# monco

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
claude-code/: README.md
claude-code/commands/sdd/: spec-custom.md  spec-design.md  spec-impl.md  spec-init.md  spec-requirements.md  spec-status.md  spec-tasks.md  steering.md
claude-code/plugin-template/: .mcp.json  settings.json
claude-code/plugin-template/.claude-plugin/: plugin.json
src/: main.py
